--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -14,8 +14,10 @@
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "validator": "^13.9.0"
   }
 }
