--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.17",
     "@material-tailwind/react": "^2.0.0",
+    "@mui/material": "^5.13.3",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@openzeppelin/contracts": "^4.8.3",
     "@rainbow-me/rainbowkit": "^0.12.12",
