--- a/front-end/package.json
+++ b/front-end/package.json
@@ -66,7 +66,6 @@
     "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1",
-    "typechain": "^8.1.1",
-    "typescript": "^5.0.4"
+    "typechain": "^8.1.1"
   }
 }
